--- a/Insan.html
+++ b/Insan.html
@@ -23,7 +23,7 @@
         <li class="li"><a href="Contact-Us.html">Contact Us</a></li>
      </ul>
 
-     <img id="ekhPic" src="images/insan.jpg" alt="logo">
+     <img id="ekhPic" src="images/Insan.jpg" alt="logo">
 
             <h2 class="suptitl"> Charitable Foundation for<br>CHARITY COMMITTEE FOR ORPHANS CARE <br></h2>
             <h5 class="A2"> King Salman bin Abdulaziz requested the establishment of the association, and after preparing the association’s bylaws, it was submitted to the Ministry of Labor and Social Affairs, which in turn submitted it to the Supreme Court, and royal approval was issued to establish the Charitable Association for Orphan Care. </h5>
