--- a/About-us.html
+++ b/About-us.html
@@ -106,7 +106,7 @@ function shuffleList() {
                  <h5>upcoming programmers      </h5>
                    <p>We are four students from College Of IT & CS. In order to dispel the false belief that the Kingdom of Saudi Arabia, may God protect it, does not care about its citizens' comfort, we citizens created this website, featuring the most well-known charities in our beloved nation. We have designed and developed this site with the intention of assisting and educating the community with charitable associations in the Kingdom of Saudi Arabia.</p>
                  <div class="data">
-                 <a href="HOME.html" class="back">Go Back</a>
+                 <a href="home.html" class="back">Go Back</a>
                  </div>
                </div>
              </div>
